--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.android.gamesnews.GamesActivity">
+    tools:context="com.example.android.gamesnews.activity.GamesActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="1"
